--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -15,32 +15,43 @@
       background-color: #FAF4ED;
       font-family: 'Work Sans', sans-serif;
     }
+
     .button {
       border: 1px solid rgb(0, 0, 0);
       border-radius: 10px;
     }
+
     .navbar {
       padding: 1rem;
       border-bottom: 1px solid rgb(0, 0, 0);
       background-color: #FAF4ED;
     }
+
     #navbar-logo {
       font-family: 'EB Garamond', serif;
       font-style: italic;
       font-size: 24px;
     }
+
     .sign-div {
       padding: 3rem;
     }
+
     #back-button {
       padding: 2rem;
     }
+
     .footer {
       background-color: #FAF4ED;
       padding: 1.5rem;
     }
+
     #footer-text {
       font-size: 12px;
+    }
+
+    .feed-stream {
+      padding-top: 1.5rem;
     }
   </style>
 </head>
