--- a/src/views/pages/sign-up.ejs
+++ b/src/views/pages/sign-up.ejs
@@ -24,7 +24,6 @@
 
       <section class="section is-small">
         <div class="columns is-centered">
-
           <form class="block" id="login-form">
             <div class="title">
               <h1 class="title">New to The Notebook?</h1>
@@ -36,21 +35,22 @@
             <div class="field">
               <label class="label">Username</label>
               <div class="control">
-                <input class="input" id="username" type="text" name="username" placeholder="Alex G">
+                <input class="input" id="username" type="text" name="username" required="required" placeholder="Alex G">
               </div>
             </div>
 
             <div class="field">
               <label class="label">Email</label>
               <div class="control">
-                <input class="input" id="login" type="text" name="login" placeholder="e.g. alex@gmail.com">
+                <input class="input" id="login" type="text" name="login" required="required"
+                  placeholder="e.g. alex@gmail.com">
               </div>
             </div>
 
             <div class="field">
               <label class="label">Password</label>
               <div class="control">
-                <input class="input" type="password" name="password" placeholder="********">
+                <input class="input" type="password" name="password" required="required" placeholder="********">
               </div>
             </div>
             <div class="field">
