--- a/src/views/pages/write-note.ejs
+++ b/src/views/pages/write-note.ejs
@@ -7,20 +7,19 @@
 </head>
 
 <body>
-  <header>
-    <%- include('../partials/nav') %>
-  </header>
+  <div class="container">
+    <header>
+      <%- include('../partials/nav') %>
+    </header>
 
-  <aside class="menu">
-    <div>
-      <a href="/dashboard" class="button is-text" id="back-button">
-        《 BACK
-      </a>
-    </div>
-  </aside>
+    <aside class="menu">
+      <div>
+        <a href="/dashboard" class="button is-text" id="back-button">
+          BACK </a>
+      </div>
+    </aside>
 
-  <section class="section is-medium">
-    <div class="container">
+    <section class="section is-medium">
       <div class="columns">
         <div class="column is-3" style="text-align: right;">
           <aside class="menu">
@@ -29,7 +28,7 @@
         <div class="column is-4">
           <div class="mb-6">
             <div class="has-text-weight-bold mb-2">
-              Write a note 💬  
+              Write a note 💬
             </div>
             <form action="/dog-messages" method="post">
               <input class="input" type="text" name="message" placeholder="Today I am feeling ... " />
@@ -38,12 +37,10 @@
           </div>
         </div>
       </div>
-    </div>
-  </section>
-
+    </section>
+  </div>
 </body>
 
 <%- include('../partials/footer') %>
 
 </html>
-
