--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -9,11 +9,11 @@
     </div>
 
     <div class="navbar-end">
+      <a href="/settings" class="navbar-item">
+        <%= userInfo.username %>
+      </a>
       <a href="/write-note" class="navbar-item">WRITE A NOTE ✍️</a>
       <a href="/make-a-wish" class="navbar-item">MAKE A WISH 🔮</a>
-      <a href="/dashboard" class="navbar-item">
-        <%= email %>
-      </a>
       <a href="/" class="navbar-item">Log out</a>
     </div>
 
