--- a/src/views/pages/make-a-wish.ejs
+++ b/src/views/pages/make-a-wish.ejs
@@ -31,7 +31,7 @@
             <div class="has-text-weight-bold mb-2">
               I want to eat / see / go to ...
             </div>
-            <form action="/dog-messages" method="post">
+            <form action="/make-wish" method="post">
               <input class="input" type="text" name="message" placeholder=" Type here " />
 
               <button class="button mt-2">Make a Wish ✨</button>
