--- a/src/views/pages/write-note.ejs
+++ b/src/views/pages/write-note.ejs
@@ -30,7 +30,7 @@
             <div class="has-text-weight-bold mb-2">
               Write a note 💬
             </div>
-            <form action="/dog-messages" method="post">
+            <form action="/write-notes" method="post">
               <input class="input" type="text" name="message" placeholder="Today I am feeling ... " />
               <button class="button mt-2">SUBMIT</button>
             </form>
