--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -10,7 +10,7 @@
 
     <div class="navbar-end">
       <a href="/settings" class="navbar-item">
-        <%= userInfo.username %>
+        <%= userInfo.username %> Account Settings ⚙️
       </a>
       <a href="/write-note" class="navbar-item">WRITE A NOTE ✍️</a>
       <a href="/make-a-wish" class="navbar-item">MAKE A WISH 🔮</a>
