--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -54,4 +54,9 @@
       padding-top: 1.5rem;
     }
   </style>
+  
+  <script src=“https://www.gstatic.com/firebasejs/9.6.4/firebase-performance-compat.js”>
+  const perf = firebase.performance();
+  </script>
+  
 </head>
