--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -47,8 +47,8 @@
               </div>
             </div>
 
-            <div class="field">
-              <button class="button">Sign In</button>
+            <div class="field form-button-div">
+              <button class="button">SIGN IN</button>
             </div>
 
             <div class="field">
