--- a/src/views/pages/sign-up.ejs
+++ b/src/views/pages/sign-up.ejs
@@ -53,8 +53,8 @@
                 <input class="input" type="password" name="password" required="required" placeholder="********">
               </div>
             </div>
-            <div class="field">
-              <button class="button">Join</button>
+            <div class="field form-button-div">
+              <button class="button">JOIN</button>
             </div>
 
             <div class="field">
