--- a/src/views/partials/nav.ejs
+++ b/src/views/partials/nav.ejs
@@ -14,7 +14,7 @@
       </a>
       <a href="/write-note" class="navbar-item">WRITE A NOTE ✍️</a>
       <a href="/make-a-wish" class="navbar-item">MAKE A WISH 🔮</a>
-      <a href="/" class="navbar-item">Log out</a>
+      <a href="/sessionLogout" class="navbar-item">LOG OUT</a>
     </div>
 
     <% } else if(locals.hideSignIn) { %>
