--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -37,6 +37,11 @@
       padding: 3rem;
     }
 
+    .form-button-div {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
+
     #back-button {
       padding: 2rem;
     }
