--- a/src/views/pages/settings.ejs
+++ b/src/views/pages/settings.ejs
@@ -8,14 +8,13 @@
 <body>
   <div class="container">
     <header>
-      <%- include('../partials/nav') %>
+      <%- include('../partials/nav', { signedIn: true }) %>
     </header>
 
     <aside class="menu">
       <div>
         <a href="/dashboard" class="button is-text" id="back-button">
-          BACK
-        </a>
+          << </a>
       </div>
     </aside>
 
