--- a/src/views/pages/sign-in.ejs
+++ b/src/views/pages/sign-in.ejs
@@ -9,7 +9,7 @@
   <div class="container">
 
     <header>
-      <%- include('../partials/nav', { hideSignIn: true }) %>
+      <%- include('../partials/nav', { signedIn: false }) %>
     </header>
 
     <aside class="menu">
