--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -33,6 +33,11 @@
       font-size: 24px;
     }
 
+    .navbar-end>.navbar-item {
+      margin-left: 0.5rem;
+      font-size: small;
+    }
+
     .sign-div {
       padding: 3rem;
     }
@@ -43,7 +48,7 @@
     }
 
     #back-button {
-      padding: 2rem;
+      margin-top: 2rem;
     }
 
     .footer {
@@ -59,9 +64,9 @@
       padding-top: 1.5rem;
     }
   </style>
-  
+
   <script src=“https://www.gstatic.com/firebasejs/9.6.4/firebase-performance-compat.js”>
-  const perf = firebase.performance();
+    const perf = firebase.performance();
   </script>
-  
+
 </head>
