--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -35,7 +35,7 @@
   <div class="container">
 
     <header>
-      <%- include('../partials/nav') %>
+      <%- include('../partials/nav', { signedIn: false }) %>
     </header>
 
     <section class="hero is-medium">
