--- a/src/views/pages/make-a-wish.ejs
+++ b/src/views/pages/make-a-wish.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <%- include('../partials/head') %>
+  <%- include('../partials/head', {pageTitle: 'Make a Wish' }) %>
 
 </head>
 
@@ -43,9 +43,8 @@
 
       </div>
     </section>
+    <%- include('../partials/footer') %>
   </div>
 </body>
-
-<%- include('../partials/footer') %>
 
 </html>
