--- a/src/views/pages/write-note.ejs
+++ b/src/views/pages/write-note.ejs
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-  <%- include('../partials/head') %>
-
+  <%- include('../partials/head', {pageTitle: 'Write a Note' }) %>
 </head>
 
 <body>
@@ -41,9 +40,8 @@
         </div>
       </div>
     </section>
+    <%- include('../partials/footer') %>
   </div>
 </body>
-
-<%- include('../partials/footer') %>
 
 </html>
