--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8">
-  <title>THE NOTEBOOK</title>
+  <title>the notebook | <%= pageTitle %>
+  </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 
