--- a/src/views/pages/sign-up.ejs
+++ b/src/views/pages/sign-up.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <%- include('../partials/head') %>
+  <%- include('../partials/head', {pageTitle: 'Sign Up' }) %>
 </head>
 
 <body>
@@ -21,7 +21,6 @@
     </aside>
 
     <div class="sign-div">
-
       <section class="section is-small">
         <div class="columns is-centered">
           <form class="block" id="login-form">
@@ -66,7 +65,6 @@
         <div id="login-error" style="display: none;">
       </section>
     </div>
-
     <%- include('../partials/footer') %>
   </div>
 </body>
